--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,12 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/phpunit.xml        export-ignore
+/.devcontainer      export-ignore
+/.github            export-ignore
+/storage            export-ignore
 /tests              export-ignore
 /.editorconfig      export-ignore
-/.devcontainer      export-ignore
+/.gitattributes     export-ignore
+/.gitignore         export-ignore
+/phpcs.xml          export-ignore
+/phpunit.xml        export-ignore
