--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Theomessin\\Tus\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
+            "Theomessin\\Tus\\": "src",
             "Theomessin\\Tus\\Tests\\": "tests"
         }
     },
