--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /.devcontainer      export-ignore
 /.github            export-ignore
 /storage            export-ignore
+/tests              export-ignore
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
